colocando tag no deployment eajustes no Jenkinsfile para fazer push na imegem

--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: api
-        image: lholanda/api-produto:versao-teste
+        image: lholanda/api-produto:{{tag}}
         resources:
           limits:
             memory: "128Mi"
